<resources>
    <string name="app_name">WhackAThing</string>
    <string name="whack_a_thing">Whack a Thing!</string>
    <string name="change_image">Change Image</string>
    <string name="play">Play</string>
    <string name="thingtowhack">thingtowhack</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="select_image">Select Image</string>
    <string name="name_your_image">Name your image</string>
    <string name="pick_a_background_color">Pick a background color</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="pink">Pink</string>
    <string name="green">Green</string>
</resources>