<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/selectImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/select_image"/>

    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectImageButton"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="no"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameImage"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/name_your_image"
        app:layout_constraintTop_toBottomOf="@+id/previewImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_of_service_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pickImageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameImage"
        app:layout_constraintBottom_toTopOf="@id/backgroundColor"
        android:text="@string/pick_a_background_color"
        android:layout_marginTop="64dp"/>

    <RadioGroup
        android:id="@+id/backgroundColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/white"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pickImageText"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <RadioButton
            android:id="@+id/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white" />

        <RadioButton
            android:id="@+id/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black" />

        <RadioButton
            android:id="@+id/pink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink" />

        <RadioButton
            android:id="@+id/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green" />

    </RadioGroup>
    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendDataHome"
        android:text="@string/done"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/backgroundColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>